<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="232dp"
            android:layout_height="150dp"
            android:layout_marginTop="37dp"
            android:layout_marginBottom="51dp"
            android:src="@drawable/ic_talde1"
            app:layout_constraintBottom_toTopOf="@+id/signupUsername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/signupUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/usernameHint"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/signupPassword"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/signupPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:ems="10"
            android:hint="@string/passHint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/signupEmail"
            app:layout_constraintStart_toStartOf="@+id/signupUsername"
            app:layout_constraintTop_toBottomOf="@+id/signupUsername" />

        <EditText
            android:id="@+id/signupEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/signupPhone"
            app:layout_constraintStart_toStartOf="@+id/signupPassword"
            app:layout_constraintTop_toBottomOf="@+id/signupPassword" />

        <EditText
            android:id="@+id/signupPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:ems="10"
            android:hint="@string/phoneHint"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/signupButton"
            app:layout_constraintStart_toStartOf="@+id/signupEmail"
            app:layout_constraintTop_toBottomOf="@+id/signupEmail" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="219dp"
            android:layout_height="54dp"
            android:layout_marginTop="72dp"
            android:text="@string/signupStr"
            android:textSize="16sp"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupPhone" />

        <Button
            android:id="@+id/signupBackButton"
            android:layout_width="121dp"
            android:layout_height="55dp"
            android:layout_marginBottom="71dp"
            android:text="@string/backButton"
            android:textSize="16sp"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.944"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupButton"
            app:layout_constraintVertical_bias="0.909" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:minHeight="48dp"
            android:text="@string/showpassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupPhone"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>