<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signupButtonNav"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="230dp"
            android:layout_height="0dp"
            android:layout_marginTop="37dp"
            android:layout_marginBottom="383dp"
            android:src="@drawable/ic_talde1"
            app:layout_constraintBottom_toTopOf="@+id/gotoSignup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="210dp"
            android:layout_height="60dp"
            android:layout_marginBottom="33dp"
            android:ems="10"
            android:hint="@string/passHint"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginUsername"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="216dp"
            android:layout_height="48dp"
            android:layout_marginBottom="240dp"
            android:text="@string/loginStr"
            android:textSize="16sp"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

        <Button
            android:id="@+id/gotoSignup"
            android:layout_width="162dp"
            android:layout_height="56dp"
            android:layout_marginEnd="38dp"
            android:layout_marginBottom="57dp"
            android:text="@string/signupStr"
            android:textSize="16sp"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="193dp"
            android:layout_height="38dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="144dp"
            android:layout_marginEnd="9dp"
            android:text="@string/noAccount"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/gotoSignup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="210dp"
            android:layout_height="70dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/usernameHint"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/loginPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="296dp"
            android:minHeight="48dp"
            android:text="@string/showpassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>